--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,6 +14,7 @@ const {
   description = "Personal Academic Homepage",
   lang,
 } = Astro.props;
+
 ---
 
 <!doctype html>
@@ -22,9 +23,46 @@ const {
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon.svg`} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+
+    <!-- Font faces with dynamic base URL -->
+    <style is:inline set:html={`
+      @font-face {
+        font-family: "IBM Plex Sans";
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url("${import.meta.env.BASE_URL}fonts/IBMPlexSans-Regular.woff2") format("woff2");
+        unicode-range: U+0020-007F, U+0080-00FF, U+0100-017F, U+0180-024F;
+      }
+      @font-face {
+        font-family: "IBM Plex Sans";
+        font-style: italic;
+        font-weight: 400;
+        font-display: swap;
+        src: url("${import.meta.env.BASE_URL}fonts/IBMPlexSans-Italic.woff2") format("woff2");
+        unicode-range: U+0020-007F, U+0080-00FF, U+0100-017F, U+0180-024F;
+      }
+      @font-face {
+        font-family: "IBM Plex Sans";
+        font-style: normal;
+        font-weight: 600;
+        font-display: swap;
+        src: url("${import.meta.env.BASE_URL}fonts/IBMPlexSans-SemiBold.woff2") format("woff2");
+        unicode-range: U+0020-007F, U+0080-00FF, U+0100-017F, U+0180-024F;
+      }
+      @font-face {
+        font-family: "IBM Plex Sans";
+        font-style: normal;
+        font-weight: 700;
+        font-display: swap;
+        src: url("${import.meta.env.BASE_URL}fonts/IBMPlexSans-Bold.woff2") format("woff2");
+        unicode-range: U+0020-007F, U+0080-00FF, U+0100-017F, U+0180-024F;
+      }
+    `} />
+
     <ClientRouter />
 
     <!-- Iconify Icon Web Component -->
