--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -8,7 +8,7 @@ import NewsList from "../../components/sections/NewsList.astro";
 import PublicationsList from "../../components/sections/PublicationsList.astro";
 import AwardsList from "../../components/sections/AwardsList.astro";
 // import ProjectsList from "../../components/sections/ProjectsList.astro";
-import { useTranslations, type Language } from "../../i18n";
+import { useTranslations, type Language, getLocalizedPath } from "../../i18n";
 
 export async function getStaticPaths() {
   return [{ params: { lang: "en" } }, { params: { lang: "zh" } }];
@@ -101,7 +101,7 @@ const awardItems = awards.map((a) => ({
     <PublicationsList
       title={t("sections.publications")}
       moreText={t("sections.more")}
-      moreLink={`/${lang}/publications`}
+      moreLink={getLocalizedPath("/publications", lang)}
       items={publicationItems}
     />
 
