--- a/src/pages/[lang]/publications.astro
+++ b/src/pages/[lang]/publications.astro
@@ -3,7 +3,7 @@ import { getCollection, getEntry } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import MainLayout from "../../components/layout/MainLayout.astro";
 import PublicationsList from "../../components/sections/PublicationsList.astro";
-import { useTranslations, type Language } from "../../i18n";
+import { useTranslations, type Language, getLocalizedPath } from "../../i18n";
 
 export async function getStaticPaths() {
   return [{ params: { lang: "en" } }, { params: { lang: "zh" } }];
@@ -35,7 +35,7 @@ const publicationItems = publications.map((p) => ({
   <MainLayout
     name={profile?.data.name || "Cheng LYU"}
     lang={lang}
-    currentPath={`/${lang}/publications`}
+    currentPath="/publications"
     photo={profile?.data.photo || "/images/photo.jpg"}
     contacts={profile?.data.contacts || []}
   >
