--- a/src/components/layout/Sidebar.astro
+++ b/src/components/layout/Sidebar.astro
@@ -68,7 +68,7 @@ for (const [path, module] of Object.entries(images)) {
   @reference "../../styles/globals.css";
 
   .sidebar {
-    @apply flex flex-row md:flex-col w-fit px-4 md:px-0 items-start gap-6;
+    @apply flex flex-row md:flex-col w-fit px-0 items-start gap-6;
   }
 
   .sidebar__photo {
