--- a/src/components/sections/ContentSection.astro
+++ b/src/components/sections/ContentSection.astro
@@ -40,7 +40,7 @@ const { title, items, class: className = "" } = Astro.props;
   @reference "../../styles/globals.css";
 
   .content-section {
-    @apply p-4 w-full flex flex-col gap-4;
+    @apply w-full flex flex-col gap-4;
   }
 
   .content-section__items {
