--- a/src/components/sections/EducationList.astro
+++ b/src/components/sections/EducationList.astro
@@ -63,7 +63,7 @@ const t = useTranslations(lang);
   @reference "../../styles/globals.css";
 
   .education-list {
-    @apply p-4 w-full flex flex-col gap-4;
+    @apply w-full flex flex-col gap-4;
   }
 
   .education-list__items {
