--- a/src/components/sections/NewsList.astro
+++ b/src/components/sections/NewsList.astro
@@ -40,7 +40,7 @@ const { title, items, class: className = "" } = Astro.props;
   @reference "../../styles/globals.css";
 
   .news-list {
-    @apply p-4 w-full flex flex-col gap-4;
+    @apply w-full flex flex-col gap-4;
   }
 
   .news-list__items {
