--- a/src/components/sections/ProjectsList.astro
+++ b/src/components/sections/ProjectsList.astro
@@ -45,7 +45,7 @@ const { title, items, class: className = "" } = Astro.props;
   @reference "../../styles/globals.css";
 
   .projects-list {
-    @apply p-4 w-full flex flex-col gap-4;
+    @apply w-full flex flex-col gap-4;
   }
 
   .projects-list__items {
