--- a/src/components/sections/PublicationsList.astro
+++ b/src/components/sections/PublicationsList.astro
@@ -90,7 +90,7 @@ const t = useTranslations(lang);
   @reference "../../styles/globals.css";
 
   .publications-list {
-    @apply p-4 w-full flex flex-col gap-4;
+    @apply w-full flex flex-col gap-4;
   }
 
   .publications-list__items {
